2014-11-17  Oliver Kiddle  <opk@zsh.org>

	* 33700: Doc/Zsh/zle.yo, Src/Zle/iwidgets.list,
	Src/Zle/zle_misc.c, Src/Zle/zle_utils.c: new widget
	for put in vim style visual selection mode

	* 33699: Test/X02zlevi.ztst, Test/comptest: support short
	delays in zle tests where we need KEYTIMEOUT to elapse

2014-11-16  Oliver Kiddle  <opk@zsh.org>

	* 33633: Src/Zle/zle_vi.c: support vim style text objects

	* 33632: Src/Zle/zle_main.c, Src/Zle/zle_vi.c: use viopp and visual
	local keymaps if they exist

2014-11-15  Oliver Kiddle  <opk@zsh.org>

	* 33697: Doc/Zsh/zle.yo, Src/Zle/iwidgets.list, Src/Zle/zle_word.c:
	new vim style vi-backward-word-end widgets

	* 33696: Doc/Zsh/zle.yo, Src/Zle/iwidgets.list, Src/Zle/zle_hist.c:
	simple up/down line widgets that don't go through history lines

	* 33695: Src/Zle/zle_vi.c, Test/X02zlevi.ztst, Test/comptest:
	fix various vi-indent problems and vi-swap-case on a blank line

2014-11-13  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* Artur Penttinen: 19371 plus tweak: run-help helper for ip.

	* Marc Finet: 33687 (first and last patches): ensure length of
	working directory is correct and return as soon as there's
	an error chasing symlinks.

2014-11-13  Barton E. Schaefer  <schaefer@zsh.org>

	* 33686: Test/B06fc.ztst: set PS1 before pattern-matching for it

	* 33656: Src/builtin.c: different algorithm for "whence -am" to
	produce results more consistent with "whence -m"

2014-11-13  Oliver Kiddle  <opk@zsh.org>

	* 33669: Src/Zle/zle_utils.c, Test/X02zlevi.ztst: allow an empty
	line to be yanked with yy by allocating 1 byte instead of 0

2014-11-11  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 33658: Doc/Zsh/options.yo: AUTO_CD depends on SHIN_STDIN.

2014-11-09  Oliver Kiddle  <opk@zsh.org>

	* 33599: Jun T.: Test/comptest: workaround zpty issue that
	causes vi test cases to fail on MacOS and FreeBSD

	* 33640: clutton: Completion/BSD/Command/_kld: look in
	/boot/modules instead of /modules for third-party modules