@@ -509,6 +509,24 @@ exchangepointandmark(UNUSED(char **args))
 
 /**/
 int
+visualmode(UNUSED(char **args))
+{
+    switch (region_active) {
+    case 1:
+	region_active = 0;
+	break;
+    case 0:
+	mark = zlecs;
+	/* fall through */
+    case 2:
+	region_active = 1;
+	break;
+    }
+    return 0;
+}
+
+/**/
+int
 vigotocolumn(UNUSED(char **args))
 {
     int x, y, n = zmult;
